# Fruitse

./: .gitignore
PythonCode/: AppleSegmentation.py  CNNTest.py  DatabaseToCSV1.py  DatabaseToCSV2.py  DatabaseToCSV3.py  FinalCode.py  features.csv  features_new.csv  features_reduced.csv
code/C++/: CMakeLists.txt
code/C++/source/: HOG.cpp  HOG.hpp  LBP.cpp  LBP.hpp  histo16.cpp  histo16.hpp  main.cpp  pretraitement.cpp  pretraitement.hpp
code/Python/: Classifieur.py  FinalCode.py  trained_model.pkl
